src/test/ui/type-alias-impl-trait/structural-match-no-leak.min_tait.stderr
error: `impl Send` cannot be used in patterns
  --> $DIR/structural-match-no-leak.rs:19:9
   |
LL |         LEAK_FREE => (),
   |         ^^^^^^^^^

error: aborting due to previous error

